--- a/app/globals.css
+++ b/app/globals.css
@@ -133,3 +133,7 @@
   background: #000;
   color: #fff;
 }
+
+.animate-speak {
+  @apply absolute inline-flex size-5/6 animate-ping rounded-full bg-green-500 opacity-75;
+}
